# mtgkubbur.is

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml  tailwind.config.js
.github/workflows/: deploy.yml
app/: config.py  data.py  main.py  strings.py  templating.py
app/routes/: dagatal.py  data_api.py  einvigi.py  kubbar.py  methods.py  rankings.py  throun.py
app/static/css/: input.css  mtg.css  tailwind.css
app/static/js/: einvigi.js  kubbar.js  stigatafla.js  theme.js  throun.js
app/templates/: 404.html  base.html  dagatal.html  einvigi.html  index.html  kubbar.html  methods.html  throun.html
app/templates/components/: footer.html  page_header.html
data/kubbur/: calendar.json  cubes.json  head_to_head.json  meta.json  rankings.json
data/kubbur-schemas/: calendar.schema.json  cube_detail.schema.json  cubes.schema.json  head_to_head.schema.json  meta.schema.json  player.schema.json  rankings.schema.json
data/kubbur/cubes/: boltalandid.json  bolti.json  diddi-s-vintage-vanilla.json  final-destination.json  flashdance.json  genesis.json  horror-cube.json  inventors-fair.json  kaldheim-cube.json  khans-cube.json  meta-memories.json  modern-stories.json  nerva-s-cube.json  old-border-cube.json  pauper-cube-diddi.json  stone-soup-cube.json  (+9 more)
scripts/: build-css.sh  install-tailwind.sh  validate_publish.py
tests/: test_assets.py  test_dagatal.py  test_data.py  test_einvigi.py  test_kubbar.py  test_methods.py  test_pages.py  test_privacy.py  test_rankings.py  test_routes.py  test_schema.py  test_smoke.py  test_strings.py
(+31 files in other folders)
